@@ -4801,3 +4801,4 @@
          of patch #330) (Gergely Szasz).
 20150508 peripherals/disk/wd_fdc.c: implement WD2797 side comparison (rest of
          patch #330) (Gergely Szasz).
+20150508 peripherals/disk/wd_fdc.c: remove trailing whitespace (Stuart).
